--- a/AspNetCoreREST/AspNetCoreREST/Views/Home/Index.cshtml
+++ b/AspNetCoreREST/AspNetCoreREST/Views/Home/Index.cshtml
@@ -3,6 +3,13 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h3 class="display-4">Welcome</h3>
+</div>
+
+<div class="container mt-4">
+    <div class="row">
+        <a asp-controller="swagger" target="_blank" class="col-12 p-3 bg-light text-center">
+            <h5>Swagger API Documentation</h5>
+        </a>
+    </div>
 </div>
