--- a/AspNetCoreREST/AspNetCoreREST/Views/Home/Index.cshtml
+++ b/AspNetCoreREST/AspNetCoreREST/Views/Home/Index.cshtml
@@ -3,6 +3,9 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Asp.Net Core Rest api</h1>
+</div>
+
+<div class="text-center border p-2 mt-4 bg-light">
+    <a href="/swagger">Swagger api documentation</a>
 </div>
